--- a/website/package.json
+++ b/website/package.json
@@ -22,18 +22,13 @@
   },
   "homepage": "https://github.com/Riniga/javascriptgame#readme",
   "devDependencies": {
-    "@types/jquery": "^3.5.5",
-    "@types/offscreencanvas": "^2019.6.2",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
     "node-sass": "^5.0.0",
-    "open": "^7.3.0",
-    "socket.io": "^3.0.4",
-    "typescript": "^4.1.3"
+    "open": "^7.3.0"
   },
   "dependencies": {
     "fsevents": "^2.2.1"
